--- a/app/webpacker/src/stylesheets/navbar.scss
+++ b/app/webpacker/src/stylesheets/navbar.scss
@@ -44,10 +44,11 @@
 .logout-icon {
   width: 18px !important;
   height: 18px !important;
-  display: inline;
-  margin-left: 8px !important;
-  margin-right: 18.6px !important;
   margin-top: 4px !important;
+}
+
+.a-no-p > a{
+  padding-right: 0 !important;
 }
 
 .admin-settings-icon {
@@ -58,6 +59,14 @@
 
 .w-400 {
   min-width: 400px;
+}
+
+.pr-0 {
+  padding-right: 0 !important;
+}
+
+.p-8 > a {
+  padding: 15px 8px 15px 8px !important;
 }
 
 .font {
@@ -95,8 +104,15 @@
   margin: auto;
 }
 
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  background-color: transparent !important;
+  color: rgba(255, 255, 255, 0.5) !important;
+}
+
 .navbar {
-  background: #338ec5 !important;
+  background: #2988bc !important;
   border-radius: 0px !important;
   border: none !important;
 }
