--- a/frontend/app/templates/teams/index.hbs
+++ b/frontend/app/templates/teams/index.hbs
@@ -1,3 +1,9 @@
-{{#each @model as |team|}}
-  <TeamShow @team={{team}} />
-{{/each}}
+{{#if @model}}
+  {{#each @model as |team|}}
+    <TeamShow @team={{team}} />
+  {{/each}}
+{{else}}
+  <div class="container">
+    <h1>{{t "teams.index.no_content"}}</h1>
+  </div>
+{{/if}}
