--- a/frontend/app/templates/components/account-form.hbs
+++ b/frontend/app/templates/components/account-form.hbs
@@ -4,68 +4,67 @@
   </Modal.header>
   <Modal.body>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group col-md-12">
-            <label for="accountname">{{t "helpers.label.account.account_name"}}</label>
-            <div>
-              <Input class={{concat "form-control" (if this.changeset.error.accountname.validation " invalid-input")}} @value={{this.changeset.accountname}} id="accountname" @tabindex="1" />
-              <ValidationErrorsList @errors={{this.changeset.error.accountname.validation}}/>
+      <BsForm @model={{this.changeset}} as |form|>
+        <div class="row">
+          <div class="col-md-6">
+            <form.group class="col-md-12">
+              <form.element @property="accountname" @label={{t "helpers.label.account.account_name"}}
+                            @name="accountname" class={{if this.changeset.error.accountname.validation "invalid-input-name"}}
+                            id="accountname" @tabindex="1"
+                            @customError={{this.changeset.error.accountname.validation}} />
+            </form.group>
+            <form.group class="form-group col-md-12">
+              <form.element @label={{t "username"}} id="username" @name="cleartextUsername"
+                            @property="cleartextUsername" @tabindex="2"/>
+            </form.group>
+          </div>
+          <div class="col-md-6 ml-auto">
+            <div class="form-group col-md-12" id="team-power-select">
+              <form.element @label={{t "team"}} @controlType="power-select"
+                            @placeholder={{t "accounts.edit.team_placeholder"}}
+                            @options={{this.assignableTeams}} @value={{this.selectedTeam}} as |el|>
+                <el.control class={{if this.changeset.error.team.validation "invalid-input-ps"}} @renderInPlace={{true}} @onChange={{this.setSelectedTeam}} as |team|>
+                  {{team.name}}
+                </el.control>
+              </form.element>
             </div>
-          </div>
-          <div class="form-group col-md-12">
-            <label for="username">{{t "username"}}</label>
-            <div>
-              <Input id="username" class="form-control" @value={{this.changeset.cleartextUsername}} @tabindex="2"/>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 ml-auto">
-          <div class="form-group col-md-12" id="team-power-select">
-            <label for="team">{{t "team"}}</label>
-            <PowerSelect id="team" class="mb-1" @options={{this.assignableTeams}} @selected={{this.selectedTeam}} @onChange={{this.setSelectedTeam}} @renderInPlace={{true}} @allowClear={{true}} @placeholder={{t "accounts.edit.team_placeholder"}} @searchEnabled={{true}} @searchField={{"name"}} @tabindex="5" as |team|>
-              {{team.name}}
-            </PowerSelect>
-            <ValidationErrorsList/>
-          </div>
-          <div class="form-group col-md-12" id="folder-power-select">
-            <label for="folder">{{t "folder"}}</label>
-            <PowerSelect id="folder" @options={{this.availableFolders}} @selected={{this.changeset.folder}} @disabled={{this.isFolderDropdownDisabled}} @renderInPlace={{true}} @onChange={{this.setFolder}} @allowClear={{true}} @placeholder={{t "accounts.edit.folder_placeholder"}} @searchEnabled={{true}} @searchField={{"name"}} @triggerClass={{if this.changeset.error.folder.validation "invalid-input"}} @tabindex="6" as |folder|>
-              {{folder.name}}
-            </PowerSelect>
-            <ValidationErrorsList @errors={{this.changeset.error.folder.validation}}/>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="col">
-            <label for="cleartext-password">{{t "password"}}</label>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="form-group col-sm-12">
-            <Input id="cleartext-password" class="form-control secret mb-10" @value={{this.changeset.cleartextPassword}} @type="password" @name="cleartextPassword" @tabindex="3" autocomplete="off"/>
-            <PasswordStrengthMeter class="col-9 pl-0" @password={{this.changeset.cleartextPassword}}/>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <button class="btn btn-secondary btn-block col-6" {{on "click" this.setRandomPassword}} tabindex="4">{{t "accounts.edit.random_password"}}</button>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-group col-md-12">
-            <label for="description">{{t "description"}}</label>
-            <div>
-              <Textarea id="description" class="form-control vertical-resize" @value={{this.changeset.description}}  @tabindex="7"/>
-              <ValidationErrorsList @errors={{this.changeset.error.description.validation}}/>
+            <div class="form-group col-md-12" id="folder-power-select">
+              <form.element @options={{this.availableFolders}} @label={{t "folder"}} @controlType="power-select" @value={{this.changeset.folder}}
+              @placeholder={{t "accounts.edit.folder_placeholder"}} @disabled={{this.isFolderDropdownDisabled}} @customError={{this.changeset.error.folder.validation}}
+              @searchEnabled={{true}} @allowClear={{true}} @searchField={{"name"}} as |el|>
+                <el.control class={{if this.changeset.error.folder.validation "invalid-input-ps"}} @renderInPlace={{true}} @onChange={{this.setFolder}} as |folder|>
+                  {{folder.name}}
+                </el.control>
+              </form.element>
             </div>
           </div>
         </div>
-      </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="col-sm-12">
+              <form.element @label={{t "password"}} @name="cleartextPassword" id="cleartext-password"
+                            class="secret mb-10"
+                            @property="cleartextPassword" @type="password" @tabindex="3" autocomplete="off"/>
+              <PasswordStrengthMeter class="col-9 pl-0" @password={{this.changeset.cleartextPassword}}/>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <button class="btn btn-secondary btn-block col-6 mt-32 ml-15" {{on "click" this.setRandomPassword}} tabindex="4">
+              {{t "accounts.edit.random_password"}}
+            </button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <form.group class="col-md-12">
+              <form.element @label={{t "description"}} @property="description" @controlType="textarea"
+                            id="description" class="{{if
+                      this.changeset.error.description.validation "invalid-input"}} vertical-resize"
+                            @tabindex="7" @customError={{this.changeset.error.description.validation}}/>
+            </form.group>
+          </div>
+        </div>
+      </BsForm>
     </div>
   </Modal.body>
   <Modal.footer>
