--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -14,7 +14,7 @@
     %th= t '.last_login_at'
     %th= t '.last_login_from'
     %th= t '.provider_uid'
-    %th= t '.admin'
+    %th= t '.role'
     %th{colspan: "3"}= t :actions
   - @users.each do |user|
     %tr{class: "#{cycle( 'odd', 'even' )}"}
