--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -3,13 +3,11 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 
 @import "ember-bootstrap/bootstrap";
 @import "pod-styles";
-/*@import "secret_input";*/
+@import "secret-input";
 
 @import "ember-power-select/themes/bootstrap";
 
 @import "ember-power-select";
-
-/*@import "secret_input";*/
 
 @import "footer";
 @import "nav-bar";
