--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -150,6 +150,10 @@ li a {
   display: inline;
 }
 
+.ml-254 {
+  margin-left: 254px !important;
+}
+
 .icon-button {
   width: 18px !important;
   height: 18px !important;
