--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -16,3 +16,11 @@ nav a.nav-link {
 .dropdown-toggle-hided::after {
   display: none;
 }
+
+.ml-238 {
+  margin-left: 238px !important;
+}
+
+.vertical-center-icon {
+  margin-bottom: 4px !important;
+}
