--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container ml-254 pl-0">
   <h3>{{t "session.newuser.title"}}!</h3>
 
   <h4>{{t "select_team"}}</h4>
