--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,20 +5,23 @@
 
 - if current_user
   %nav.navbar.navbar-default{:role => "navigation"}
-    .container-fluid
-
-      .navbar-header
-        %a.font{href: "/teams", class: "font back-link no-hover"} Leave Admin
+    %div.sidenav
+      %div.sidenav-header
         = link_to(image_pack_tag("cryptopussy_without_text.svg", class: 'logo-icon'), root_path, class:'navbar-logo')
-        = link_to('Cryptopus Admin', root_path, class: 'navbar-title font no-hover')
+        = link_to('Cryptopus', root_path, class: 'navbar-title no-hover')
+    .container-fluid
+      .navbar-header
+        %a.font{href: "/teams", class: "font back-link no-hover"}
+          = image_pack_tag("angle-left.svg", class: 'back-arrow')
+          = "Back"
         %button.navbar-toggle{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", :type => "button"}
           %span.sr-only Toggle navigation
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
 
-      #bs-example-navbar-collapse-1.collapse.navbar-collapse
-        %ul.nav.navbar-nav.navbar-right.ml-auto
+      #bs-example-navbar-collapse-1.collapse.navbar-collapse.ml-500
+        %ul.nav.navbar-nav.ml-auto
           %li.dropdown
             %a.dropdown-toggle.font.helper-img.pr-0{"data-toggle": "dropdown", href: "#"}
               = t(:settings)
