--- a/app/webpacker/src/stylesheets/navbar.scss
+++ b/app/webpacker/src/stylesheets/navbar.scss
@@ -53,7 +53,7 @@
 
 .back-link {
   min-width: 120px;
-  margin-right: 100px;
+  margin-left: 238px;
   padding: 15px 0px 15px 0 !important;
 }
 
@@ -130,7 +130,7 @@
 
 .navbar-title {
   color: white !important;
-  font-size: 18px;
+  font-size: 1.25em;
   line-height: 20px;
   min-width: 200px;
   height: 50px;
@@ -190,11 +190,35 @@
 }
 
 .logo-icon {
-  height: 56px;
+  height: 40px;
 }
 
 .navbar-logo {
   padding: 0 0 0 0 !important;
 }
 
+.ml-500 {
+  margin-left: 958px !important;
+}
 
+.sidenav {
+  height: 100%;
+  width: 250px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #106fac;
+  overflow-x: hidden;
+}
+
+.sidenav-header {
+  height: 54px;
+  padding-left: 32px;
+  display: flex;
+  align-items: center
+}
+
+.back-arrow {
+  height: 24px;
+}
