--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -81,9 +81,6 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 .w-20 {
   width: 20%;
 }
-.w-20 {
-  width: 20%;
-}
 
 .columns li.ember-power-select-option {
   width: 100%;
@@ -202,4 +199,8 @@ li a {
 
 .ember-notify-default.ember-notify-cn {
   bottom: 3em !important;
+}
+
+.ember-basic-dropdown .ember-basic-dropdown-trigger {
+  padding-top: 3px;
 }
