--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -78,8 +78,12 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
   margin-bottom: 10px;
 }
 
+.w-4 {
+  width: 4% !important;
+}
+
 .w-20 {
-  width: 20%;
+  width: 20% !important;
 }
 
 .columns li.ember-power-select-option {
