--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -12,11 +12,11 @@
     <div>
       <h1 class="d-inline">{{t "accounts.show.account"}}: {{@account.accountname}}</h1>
     </div>
-    <div>
+    <div class="col-sm-1 d-flex justify-content-between align-items-center">
       <DeleteWithConfirmation @record={{@account}} @didDelete={{this.refreshRoute}}>
         <img class="icon-button d-inline" src="/ember/assets/images/delete.svg" alt="delete">
       </DeleteWithConfirmation>
-      <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleAccountEdit}} href="#">
+      <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleAccountEdit}}>
         <img class="icon-button" src="/ember/assets/images/edit.svg" alt="edit">
       </a>
     </div>
@@ -25,15 +25,15 @@
     <p>{{@account.description}}</p>
     <div class="result-username">
       <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@account.cleartextUsername}}/>
-      <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextUsername}}>
-        <img class="icon-clippy img d-inline w-20" src="/ember/assets/images/clipboard.svg" alt="clip">
+      <CopyButton class="btn btn-light w-4" @clipboardText={{@account.cleartextUsername}}>
+        <img class="icon-clippy img d-inline" src="/ember/assets/images/clipboard.svg" alt="clip">
       </CopyButton>
     </div>
-    <a role="button" class="show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</a>
+    <a role="button" class="show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "accounts.show.show_password"}}</a>
     <div class="result-password">
       <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
-      <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}}>
-        <img class="icon-clippy img d-inline w-20" src="/ember/assets/images/clipboard.svg" alt="clip">
+      <CopyButton class="btn btn-light w-4" @clipboardText={{@account.cleartextPassword}}>
+        <img class="icon-clippy img d-inline" src="/ember/assets/images/clipboard.svg" alt="clip">
       </CopyButton>
     </div>
   </div>
