--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -16,7 +16,7 @@
       <DeleteWithConfirmation @record={{@account}} @didDelete={{this.refreshRoute}}>
         <img class="icon-button d-inline" src="/ember/assets/images/delete.svg" alt="delete">
       </DeleteWithConfirmation>
-      <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleAccountEdit}}>
+      <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleAccountEdit}} href="#">
         <img class="icon-button" src="/ember/assets/images/edit.svg" alt="edit">
       </a>
     </div>
@@ -29,7 +29,7 @@
         <img class="icon-clippy img d-inline" src="/ember/assets/images/clipboard.svg" alt="clip">
       </CopyButton>
     </div>
-    <a role="button" class="show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "accounts.show.show_password"}}</a>
+    <a role="button" class="show-password-link {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</a>
     <div class="result-password">
       <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
       <CopyButton class="btn btn-light w-4" @clipboardText={{@account.cleartextPassword}}>
