Some styling fixes

--- a/frontend/app/templates/components/delete-with-confirmation.hbs
+++ b/frontend/app/templates/components/delete-with-confirmation.hbs
@@ -1,4 +1,4 @@
-<span role="button" {{on "click" this.toggleModal}}>
+<span class={{@class}} role="button" {{on "click" this.toggleModal}}>
   {{yield}}
 </span>
 
