--- a/frontend/app/templates/components/account-show.hbs
+++ b/frontend/app/templates/components/account-show.hbs
@@ -4,16 +4,24 @@
 {{#if this.isFileEntryCreating}}
   <FileEntryForm @class="modal_file_entry" @account={{@account}} @title={{t "file_entries.new.title"}} @onAbort={{this.toggleFileEntryNew}}/>
 {{/if}}
-<BsButton id="account-show-back" @type="light" {{on "click" this.transitionBack}}>
-  <img class="icon-button" src="/ember/assets/images/arrow-left.svg" alt="back">
-</BsButton>
-<div class="container mt-3">
+
+<div class="container mt-3 ml-254">
+  <div class="row mb-3">
+    <div class="col">
+      <a id="account-show-back" href="#" {{on "click" this.transitionBack}}>
+        <span>
+        <img class="icon-button account-show-back" src="/ember/assets/images/arrow-left.svg" alt="back">
+        <i>Back</i>
+        </span>
+      </a>
+    </div>
+  </div>
   <div class="d-flex flex-row justify-content-between">
     <div>
-      <h1 class="d-inline">{{t "accounts.show.account"}}: {{@account.accountname}}</h1>
+      <h2 class="d-inline">{{t "accounts.show.account"}}: {{@account.accountname}}</h2>
     </div>
     <div class="col-sm-1 d-flex justify-content-between align-items-center">
-      <DeleteWithConfirmation @record={{@account}} @didDelete={{this.refreshRoute}}>
+      <DeleteWithConfirmation @class="btn btn-light edit_button" @record={{@account}} @didDelete={{this.refreshRoute}}>
         <img class="icon-button d-inline" src="/ember/assets/images/delete.svg" alt="delete">
       </DeleteWithConfirmation>
       <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleAccountEdit}} href="#">
@@ -39,7 +47,7 @@
   </div>
   <div class="d-flex flex-row justify-content-between">
     <div>
-      <h1>{{t "accounts.show.attachments"}}</h1>
+      <h3>{{t "accounts.show.attachments"}}</h3>
     </div>
     <div>
       <BsButton @type="primary" {{on "click" this.toggleFileEntryNew}}>
